# SalesControl

./: .env.example  .gitignore  DEPLOYMENT_TEST_GUIDE.md  README.md  auto_deploy.sh  config.yaml  config.yaml.example  pyproject.toml  recorder-agent.service  register_device.sh  setup_raspberry.sh
analysis_worker/: Dockerfile  README.md  pyproject.toml
analysis_worker/analysis_worker/: __init__.py  logging_setup.py  main.py  metrics.py  openai_client.py  prefilter.py  prompt_builder.py  recovery.py  repository.py  settings.py
analysis_worker/tests/: __init__.py  test_prefilter.py  test_repository_claiming.py  test_schema_validation.py
asr_worker/: Dockerfile  README.md  pyproject.toml
asr_worker/asr_worker/: __init__.py  audio_assembler.py  audio_fetcher.py  heuristics.py  logging_setup.py  main.py  metrics.py  recovery.py  repository.py  settings.py  transcribe.py
asr_worker/tests/: __init__.py  conftest.py  test_heuristics.py
dashboard_web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json
dashboard_web/src/: App.tsx  index.css
dashboard_web/src/api/: client.ts  types.ts
dashboard_web/src/auth/: tokenStore.ts
dashboard_web/src/components/: CategoryChart.tsx  DialogueDrawer.tsx  DialoguesTable.tsx  ErrorState.tsx  FiltersBar.tsx  Header.tsx  HourlyChart.tsx  LoadingState.tsx  QualityChart.tsx  StatCards.tsx
dashboard_web/src/pages/: DevicesPage.tsx  DialoguesPage.tsx  LoginPage.tsx  OverviewPage.tsx  ReviewsPage.tsx  UsersPage.tsx
infra/: .env.example  .gitignore  docker-compose.yml
ingest_api/: Dockerfile  README.md  pyproject.toml  test.db
ingest_api/alembic/: env.py
ingest_api/alembic/versions/: 001_initial_schema.py  002_vad_worker_tables.py  003_processing_recovery.py  004_asr_tables.py  005_upsell_analysis.py  006_review_labels.py  007_users_table.py
ingest_api/ingest_api/: __init__.py  analytics.py  api.py  auth.py  db.py  logging_setup.py  main.py  models.py  reviews.py  settings.py  storage.py  users.py
ingest_api/tests/: __init__.py  conftest.py  test_api.py
recorder_agent/: __init__.py  __main__.py  audio_device.py  config.py  healthcheck.py  logging_setup.py  main.py  recorder.py  scheduler.py  spool.py  uploader.py
tests/: test_config.py  test_scheduler.py  test_spool.py  test_uploader.py
vad_worker/: Dockerfile  README.md  pyproject.toml
vad_worker/tests/: __init__.py  conftest.py  e2e_test.py  test_dialogue_builder.py  test_integration.py
vad_worker/vad_worker/: __init__.py  db.py  dialogue_builder.py  logging_setup.py  main.py  metrics.py  repository.py  settings.py  vad.py
