[project]
name = "analysis-worker"
version = "1.0.0"
description = "Analysis Worker - LLM-based upsell analysis for SalesControl"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "openai>=1.50,<2",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "aiosqlite>=0.19,<1",
    "respx>=0.21,<1",
]

[project.scripts]
analysis-worker = "analysis_worker.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis_worker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
