[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingest-api"
version = "1.0.0"
description = "Audio chunk ingestion API for SalesControl"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.0.9,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "redis>=5.0,<6",
    "passlib>=1.7,<2",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.0,<5",
    "aiofiles>=23.2,<24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "httpx>=0.27,<1",
    "aiosqlite>=0.19,<1",
]

[project.scripts]
ingest-api = "ingest_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ingest_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["ingest_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
