[project]
name = "vad-worker"
version = "1.0.0"
description = "Voice Activity Detection worker for SalesControl"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "webrtcvad>=2.0.10,<3",
    "pydub>=0.25,<1",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "aiosqlite>=0.19,<1",
]

[project.scripts]
vad-worker = "vad_worker.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vad_worker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
